--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -9,7 +9,7 @@ env:
   IBM_CLOUD_SPACE: dev
   IBM_CLOUD_ORG: ulidder@us.ibm.com
   MANIFEST_NAME: manifest.yml
-  IBM_CLOUD_API: ${{secrets.IBM_CLOUD_API_KEY}}
+  IBM_CLOUD_API: ${{secrets.pDbfiOxpPQWV_GD1ytyJzslfERVoa4Z9hTKW8XToKRAa}}
 
 defaults:
   run:
