--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -7,7 +7,7 @@ env:
   IBM_CLOUD_REGION: us-south
   IBM_CLOUD_GROUP: default
   IBM_CLOUD_SPACE: dev
-  IBM_CLOUD_ORG: ulidder@us.ibm.com
+  IBM_CLOUD_ORG: wajeehafarids@gmail.com
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.pDbfiOxpPQWV_GD1ytyJzslfERVoa4Z9hTKW8XToKRAa}}
 
