--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -9,7 +9,7 @@ env:
   IBM_CLOUD_SPACE: dev
   IBM_CLOUD_ORG: wajeehafarids@gmail.com
   MANIFEST_NAME: manifest.yml
-  IBM_CLOUD_API: ${{secrets.pDbfiOxpPQWV_GD1ytyJzslfERVoa4Z9hTKW8XToKRAa}}
+  IBM_CLOUD_API: pDbfiOxpPQWV_GD1ytyJzslfERVoa4Z9hTKW8XToKRAa
 
 defaults:
   run:
