--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 # Environment variables available to all jobs and steps in this workflow
 env:
   IBM_CLOUD_REGION: us-south
-  IBM_CLOUD_GROUP: default
+  IBM_CLOUD_GROUP: f859c3cd8d6047de9645e468c45f05f7
   IBM_CLOUD_SPACE: dev
   IBM_CLOUD_ORG: wajeehafarids@gmail.com
   MANIFEST_NAME: manifest.yml
