--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -7,7 +7,7 @@ env:
   IBM_CLOUD_REGION: us-south
   IBM_CLOUD_GROUP: f859c3cd8d6047de9645e468c45f05f7
   IBM_CLOUD_SPACE: dev
-  IBM_CLOUD_ORG: wajeehafarids@gmail.com
+  IBM_CLOUD_ORG: wajeehafarids
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.IBM_CLOUD_API_KEY_2021_1217}}
 
